--- a/README.Rmd
+++ b/README.Rmd
@@ -18,12 +18,22 @@ devtools::install_github('Wences91/bibplots')
 ```
 
 ## Example
+Create a random data.frame with some indicators.
 ```{r}
+set.seed(958)
+
 library(bibplots)
-test <- data.frame(uni=c(rep('Uni 1',3),rep('Uni 2',3),rep('Uni 3',3)),
-                   indicator=rep(c('A','B','C'),3),
-                   value=trunc(runif(9,5,15)),
-                   stringsAsFactors=FALSE)
+
+test <- data.frame(I1=sample(20:40,4),
+                   I2=sample(20:40,4),
+                   I3=sample(20:40,4),
+                   stringsAsFactors = FALSE)
+row.names(test) <- c('U1','U2','U3','U4')
+head(test)
+```
+
+Obtain the plot.
+```{r}
 p <- bibplots::point_indicators(indicators = test, size=3)
 p
 ```
